@@ -1,0 +1,12 @@
+<form action="doit.cgi">
+<p>Favorite color?   <select name="colors">
+   <option value="0">red</option>
+   <option value="1">green</option>
+   <option value="2">blue</option>
+   <option value="3">orange</option>
+<!-- Warning:  this is just a test :)  at inlineinv.sl:59
+ -->
+  </select>
+</p>
+<p>Site title is: Colors!!!</p>
+</form>
